--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
             <a href="#">Portafolios</a>
             <a href="#">Servicios</a>
             <a href="#">Contactos</a>
-            <li>
+            <a>
                 <button class="switchDark active" id="switch">
                     <span><i class='bx bx-sun'></i></span>
                     <span><i class='bx bx-moon'></i></span>
-            </li>
+                </a>
         </nav>
         <section class="textos-header">
             <h1>Transporte de calidad 24/7</h1>
-            <h2>Seguridad y calidad siempre</h2>
+            <h2>Seguridad y amabilidad siempre</h2>
         </section>
         <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" 
                 style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C150.00,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" 
-                    style="stroke: none; fill: #fff;"></path>
+                style="stroke: none; fill: rgba(221, 34, 34, 0.692);"></path>
             </svg></div>
     </header>
     <main>
