--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click Driver</title>
-    <link rel="shortcut icon" href="img/icons8-coche-18.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/dark.css">
+    <link rel="shortcut icon" href="../img/icons8-coche-18.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/dark.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -24,15 +24,15 @@
         </script>
         <nav>
             <a href="#">Inicio</a>
-            <a href="#">Acerca de</a>
+            <a href="#">Sobre nosotros</a>
             <a href="#">Portafolios</a>
             <a href="#">Servicios</a>
             <a href="#">Contactos</a>
-            <a>
+            <li>
                 <button class="switchDark active" id="switch">
                     <span><i class='bx bx-sun'></i></span>
                     <span><i class='bx bx-moon'></i></span>
-                </a>
+                </li>
         </nav>
         <section class="textos-header">
             <h1>Transporte de calidad 24/7</h1>
@@ -46,9 +46,9 @@
     </header>
     <main>
         <section class="contenedor sobre-nosotros">
-            <h2 class="titulo">Misión y Visión</h2>
+            <h2 class="titulo">Sobre nosotros</h2>
             <div class="contenedor-sobre-nosotros">
-                <img src="img/undraw_by_my_car_re_j3jt.svg" alt="" class="imagen-sobre-nosotros">
+                <img src="../img/undraw_by_my_car_re_j3jt.svg" alt="" class="imagen-sobre-nosotros">
                 <div class="contenido-textos">
                     <h3><span>1</span>Misión</h3>
                     <p>Brindar un servicio de calidad tanto a los pasajeros como a los clientes que solicitan el encargo de encomienda y/o delivery.</p>
@@ -62,58 +62,58 @@
                 <h2 class="titulo">Portafolio</h2>
                 <div class="galeria-portafolio">
                     <div class="imagen-portafolio">
-                        <img src="img/Conductor1.jpg" alt="">
+                        <img src="../img/Conductor1.jpg" alt="">
                         <div class="hover-galeria">
                             <img src="img/target clic.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-portafolio">
-                        <img src="img/Conductor2.jpg" alt="">
+                        <img src="../img/Conductor2.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/target clic.png" alt="">
+                            <img src="../img/target clic.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-portafolio">
-                        <img src="img/Transporte1.jpg" alt="">
+                        <img src="../img/Transporte1.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/target clic.png" alt="">
+                            <img src="../img/target clic.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-portafolio">
-                        <img src="img/Transporte2.jpg" alt="">
+                        <img src="../img/Transporte2.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/target clic.png" alt="">
+                            <img src="../img/target clic.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-portafolio">
-                        <img src="img/Delivery1.jpg" alt="">
+                        <img src="../img/Delivery1.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/target clic.png" alt="">
+                            <img src="../img/target clic.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-portafolio">
-                        <img src="img/Delivery2.jpg" alt="">
+                        <img src="../img/Delivery2.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/target clic.png" alt="">
+                            <img src="../img/target clic.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-portafolio">
-                        <img src="img/Encomienda1.jpg" alt="">
+                        <img src="../img/Encomienda1.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/target clic.png" alt="">
+                            <img src="../img/target clic.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
                     <div class="imagen-portafolio">
-                        <img src="img/Encomienda2.jpg" alt="">
+                        <img src="../img/Encomienda2.jpg" alt="">
                         <div class="hover-galeria">
-                            <img src="img/target clic.png" alt="">
+                            <img src="../img/target clic.png" alt="">
                             <p>Nuestro trabajo</p>
                         </div>
                     </div>
@@ -124,14 +124,14 @@
             <h2 class="titulo">Que dicen nuestros clientes</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="img/perfil1.jpeg" alt="">
+                    <img src="../img/perfil1.jpeg" alt="">
                     <div class="contenido-texto-card">
                         <h4>Patricia Herrera</h4>
                         <p>El servicio es muy bueno, los conductores muy respetuosos y prudentes al conducir para llegar segura a mi destino.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="img/perfil2.jpg" alt="">
+                    <img src="../img/perfil2.jpg" alt="">
                     <div class="contenido-texto-card">
                         <h4>Cristoffer Mollinedo</h4>
                         <p>Es un servicio de muy buena calidad mis encomiendas llegaron sin ningún daño y a la hora indicada.</p>
@@ -144,17 +144,17 @@
                 <h2 class="titulo">Nuestros servicios</h2>
                 <div class="servicio-contenedor">
                     <div class="servicio-individual">
-                        <img src="img/undraw_on_the_way_re_swjt.svg" alt="">
+                        <img src="../img/undraw_on_the_way_re_swjt.svg" alt="">
                         <h3>Delivery</h3>
                         <p>Realizamos delivery de restaurantes, supermercados, farmacias y tiendas.</p>
                     </div>
                     <div class="servicio-individual">
-                        <img src="img/undraw_order_ride_re_372k.svg" alt="">
+                        <img src="../img/undraw_order_ride_re_372k.svg" alt="">
                         <h3>Transporte privado</h3>
                         <p>Ofrecemos un servicio de transporte a particulares.</p>
                     </div>
                     <div class="servicio-individual">
-                        <img src="img/undraw_order_delivered_re_v4ab.svg" alt="">
+                        <img src="../img/undraw_order_delivered_re_v4ab.svg" alt="">
                         <h3>Encomiendas</h3>
                         <p>Brindamos servicio de transporte de paquetes, sobres y encomiendas.</p>
                     </div>
@@ -179,6 +179,6 @@
         </div>
         <h2 class="titulo-final">&copy; Natalia Bilbao | UPB</h2>
     </footer>
-    <script src="scrip.js"></script>
+    <script src="../scrip.js"></script>
 </body>
 </html
